--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_slidable: ^0.5.7
   http: ^0.12.2
   pull_to_refresh: ^1.6.2
+  shared_preferences: ^0.5.12+4
   toast: ^0.1.5
 
 dev_dependencies:
